# codebase-index-mcp

./: .gitignore  README.md  pyproject.toml
src/codebase_index/: __init__.py  __main__.py  compact_map.py  git_ops.py  hook.py  indexer.py  models.py  parser.py  parsers.py  query.py  ranking.py  regex_parser.py  server.py  storage.py  treesitter_parser.py
tests/: test_all.py
